--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "A system to document the standard C library",
     "type": "project",
     "require": {
-        "php": "7.4.*"
+        "php": "7.4.*",
+        "ext-pdo": "*"
     },
     "license": "BSD",
     "authors": [
