--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "php": "7.4.*",
         "ext-pdo": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.4"
+    },
     "license": "BSD",
     "authors": [
         {
